# BMQ

./: .gitignore  CMakeLists.txt
src/: log.hpp  main.cpp
src/http/: httpClient.hpp  httpServer.hpp
src/io/: io.hpp
src/node/: CNode_client.hpp  CNode_server.hpp  INode.hpp  node.hpp
src/output/: IOutput.hpp  IOutputSocket.hpp
src/socket/: CSocket_rep.hpp  CSocket_req.hpp  ISocket.hpp  socket.hpp
